--- a/Protokoll355.tex
+++ b/Protokoll355.tex
@@ -33,7 +33,7 @@ germandbls={ß},
 \newpage
 \clearpage
 \setcounter{page}{1}
-
+\setcounter{totalnumber}{5}
 
 \section{Einleitung}
 Im folgenden Versuch sollen gekoppelte Oszillatoren untersucht werden. Bei diesen Systemen handelt es sich um schwingfähige Systeme, welche miteinander in Wechselwirkung stehen und so Energie austauschen können. 
@@ -79,14 +79,14 @@ untersucht werden. Zusätzlich wird angenommen, dass sich die Frequenzen $\nu_+$
 
 \section{Aufbau und Durchf\"{u}hrung}
 \subsection{Vorbereitungen}
-Vor Beginn der Messungen müssen die Resonanzfrequenzen beider Schwinkreise aufeinander abgestimmt werden. Dazu wird die Schaltung wie in Abbildung \ref{abb1} gezeigt aufgebaut.
+Vor Beginn der Messungen müssen die Resonanzfrequenzen beider Schwingkreise aufeinander abgestimmt werden. Dazu wird die Schaltung wie in Abbildung \ref{abb1} gezeigt aufgebaut.
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=0.5]{Abb/abb1.png}
 \caption{Diese Schaltung dient zum Kalibrieren der Resonanzfrequenzen beider Schwingkreise. [1]}
 \label{abb1}
 \end{figure}
-In einem der Kreise ist ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazi\"at angeregt. Zunächst wird mit dem Oszilloskop im YT-Betrieb die Frequenz ermittelt, bei der die gemessene Spannung $U_R$ maximal wird. Dann wird das Oszilloskop in den XY-Modus umgeschaltet die Resonanzfrequnz $\nu_{res}$ bestimmt. Diese zeichnet sich dadurch aus, dass $U_R$ und die Generatorspannung $U_0$ in Phase liegen und daher die angezeigte Lissajous-Figur eine Gerade ist. Danach wird der Sinusgenerator an den zweiten Teil des Schwingkreises angeschlossen und mit der Frequenz $\nu_{res}$ angeregt. Nun wird auch dieser Kreis durch Veränderung der variablen Kapazität in Resonanz gebracht. Dazu werden wie zuvor Lissajous-Figuren verwendet. 
+In einem der Kreise ist ein Kondensator mit variabler Kapazität verbaut. Mit dem Sinusgenerator wird nun der Kreis mit konstanter Kapazität angeregt. Zunächst wird mit dem Oszilloskop im YT-Betrieb die Frequenz ermittelt, bei der die gemessene Spannung $U_R$ maximal wird. Dann wird das Oszilloskop in den XY-Modus umgeschaltet die Resonanzfrequenz $\nu_{res}$ bestimmt. Diese zeichnet sich dadurch aus, dass $U_R$ und die Generatorspannung $U_0$ in Phase liegen und daher die angezeigte Lissajous-Figur eine Gerade ist. Danach wird der Sinusgenerator an den zweiten Teil des Schwingkreises angeschlossen und mit der Frequenz $\nu_{res}$ angeregt. Nun wird auch dieser Kreis durch Veränderung der variablen Kapazität in Resonanz gebracht. Dazu werden wie zuvor Lissajous-Figuren verwendet. 
 \subsection{Messung vom Schwebungs- und Schwingungsfrquenz}
 Für diesen Versuchsteil wird die Schaltung wie in Abbildung \ref{abb2} aufgebaut.
 \begin{figure}[h!]
@@ -100,14 +100,14 @@ Der linke Schwingkreis wird durch eine Rechteckspannung zu Schwingungen angeregt
 \frac{\nu_{Schwingung}}{\nu_{Schwebung}} = n
 \end{equation}
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
-Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese zeichen sich dadurch aus, dass die Phasenverschiebung zwischen der Erregerspannung und dem im Sekundärkreis fließenden Stroms $0$ oder $\pi$ beträgt. Die oben verwendete Schaltung wird nun mit einer Sinusspannung angeregt und das Generatorsignal auf den zweiten Kanal des Oszilloskops gelegt (siehe Abb. \ref{abb3}).
+Des Weiteren sollen die Frequenzen $\nu_-$ und $\nu_+$ bestimmt werden. Diese zeichnen sich dadurch aus, dass die Phasenverschiebung zwischen der Erregerspannung und dem im Sekundärkreis fließenden Stroms $0$ oder $\pi$ beträgt. Die oben verwendete Schaltung wird nun mit einer Sinusspannung angeregt und das Generatorsignal auf den zweiten Kanal des Oszilloskops gelegt (siehe Abb. \ref{abb3}).
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.5]{Abb/abb3.png}
 \caption{Diese Schaltung dient  zur Messung der Frequenzen der Fundamentalschwingungen. [2]}
 \label{abb3}
 \end{figure}
-So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajous-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängikeit von $C_K$ bestimmt.
+So kann die Phasenbeziehung von $I$ und $U_0$ mit Hilfe von Lissajous-Figuren untersucht werden. So werden $\nu_+$ und $\nu_-$ in Abhängigkeit von $C_K$ bestimmt.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
 
 Um den Verlauf des Stroms $I$ im Sekundärkreis bei in Abhängigkeit von der Erregerfrequenz darzustellen, wird die Schaltung wie in Abbildung \ref{abb1} aufgebaut. Mit dem Unterschied, dass der Funktionsgenerator im Sweep-Betreib arbeitet. Dies bedeutet, dass die Frequenz der Erregerspannung nicht mehr konstant ist, sondern steigt in der Zeit $\Delta t =\SI{21}{\milli\second}$ von $\nu_0 = \SI{3,8}{\kilo\hertz}$ auf $\nu_1 = \SI{74,2}{\kilo\hertz}$. Mit der Verlauf der am Widerstand abfallenden Spannung gemessen werden. Dabei wird die Zeitbasis des Oszilloskops so eingestellt, dass ein vollständiger Sweep auf dem Schirm zu sehen ist. Anfang und Ende dieses Zyklus entsprechen den Frequenzen $\nu_0$ und $\nu_1$.     
@@ -117,7 +117,7 @@ Um den Verlauf des Stroms $I$ im Sekundärkreis bei in Abhängigkeit von der Err
 \section{Auswertung}
 
 
-Sofern nicht anders angegeben, wurden alle Fehler mit python uncertainties berechnet.
+Sofern nicht anders angegeben, wurden alle Fehler mit \textsc{python uncertainties} berechnet.
 \subsection{Vorbereitungen}
 Für die Justierung des Messaufbaus wurde mit der Grobmessung eine Frequenz von \SI{30,69+-0,01}{\kilo\hertz} ermittelt. Die feine Messung mit Hilfe der Lissajous-Figuren ergab eine Resonanzfrequenz von $\SI{30,70+-0,01}{\kilo\hertz}$. Der mit L und C theoretisch berechnete Wert liegt bei \SI{30,49}{\kilo\hertz}, mit einer Abweichung von \SI{0,68}{\percent} ausgezeichnet im Toleranzbereich. Allerdings wurde in der Berechnung des theoretischen Wertes die Kapazität der Spule schon berücksichtigt.
 \subsection{Messung von Schwebungs- und Schwingungsfrequenz}
@@ -137,7 +137,7 @@ ermittelt. Die Frequenz der Schwebung ist durch $\nu_{theo}^--\nu_{theo}^+$ gege
 \end{figure}
 
 \noindent
-Die in der Tabelle 3 angebebene Abweichung bezieht sich auf den Unterschied vom experimentellen zum theoretischen Frequenzverhältnis.
+Die in der Tabelle 3 angegebene Abweichung bezieht sich auf den Unterschied vom experimentellen zum theoretischen Frequenzverhältnis.
 \subsection{Messung der Frequenzen der Fundamentalschwingungen}
 Für die Messung der Frequenzen wurden Lissajous-Figuren benutzt. Die Frequenzen $\nu_+$ und $\nu_-$ wurden aufgenommen als die Generatorspannung und der Strom im Sekundärkreis jeweils gleich- oder gegenphasig verlaufen. Die Frequenzen werden in Tabelle 4 mit den Theoriewerten aus 4.2 Verglichen. Dies ist auch in den Abbildungen \ref{42} und \ref{43} dargestellt. Diese zeigen den Verlauf von $\nu_+$ und $\nu_-$ in Abhängigkeit von der verwendeten Koppelkapazität $C_K$ dar.
 \begin{figure}[h!]
@@ -155,7 +155,7 @@ Für die Messung der Frequenzen wurden Lissajous-Figuren benutzt. Die Frequenzen
 \noindent
 Die Berechnungen zeigen eine Abweichung vom Theoriewert von jeweils ca. \SI{1}{\percent}.
 \subsection{Messung des Stroms in Abhängigkeit von der Erregerfrequenz}
-Die in dieser Messreihe aufgenommenen Werte sind in Tabelle 5 ersichlich.
+Die in dieser Messreihe aufgenommenen Werte sind in Tabelle 5 ersichtlich.
 Die bei den zeitlichen Abständen und der Spannung angegebenen Unsicherheiten entsprechen der Hälfte der kleinsten angezeigten Skaleneinteilungen des Oszilloskops. Aus den zeitlichen Abständen $d_1$ und $d_2$ kann mit folgenden Zusammenhängen die zugehörige Frequenz berechnet werden:
 \begin{itemize}
 \item $f_1 = \left( \frac{70400\cdot d_1}{\SI{21}{\milli\second}}+3800 \right)\si{\Hz}$
@@ -170,9 +170,8 @@ Diese sind in Tabelle 6 angegeben. Die Ströme wurden mit dem Ohmschen Gesetz be
 \end{figure}
 
 \section{Diskussion}
-Insgesamt sind alle Unsicherheiten innerhalb der üblichen Toleranzen. Die Messfehler beim Ablesen der Werte auf dem Bildschirm des Oszilloskopes wurden eher pessimistisch angenommen, sie sind auf jeden Fall groß genug angenommen. Die Abweichungen der experimentellen zu den theoretischen Frequenzen sind mit $<$ 10 \% tolerierbar.\newline
-In den anderen Versuchsteilen sind die Abweichungen alle gering.
-
+Die in diesem Versuch experimentell ermittelten Werte für das Frequenzverhältnis stimmen mit den Theoriewerten bis auf eine Abweichung von maximal \SI{7}{\percent} überein. Diese lassen sich durch Fehler beim Ablesen vom Schirmbild des Oszilloskops erklären. Die mit Hilfe von Lissajous-Figuren bestimmten Werte für $\nu_+$ und $\nu_-$ weisen, wie zu erwarten war, deutlich geringere Abweichungen von der Theoriekurve auf. Dies ist darauf zurückzuführen, dass die Phasenbeziehungen durch die Lissajous-Figuren sehr präzise durchführbar war. Die in allen Versuchsteilen auftretenden Abweichungen können zum Teil auch durch nicht berücksichtigte systematische Effekte wie zum Beispiel der Innenwiderstand des Generators oder der Widerstand und die parasitäre Kapazität innerhalb der Spulen. Der letzte Versuchsteil hat gezeigt, dass die Impedanz ein System von gekoppelten Schwingkreisen im Bereich seiner Resonanzfrequenzen sehr niedrig ist. Auf diese Tatsache können die im Sweep-Betrieb beobachteten Spannungs- beziehungsweise Strompeaks zurückgeführt werden.  
+\newpage
 \section{Literatur- und Abbildungsverzeichnis}
 \begin{enumerate}[{[}1{]}]
 \item Entnommen aus: \\\textit{Versuch Nr.355 Gekoppelte Schwingkreise}, TU Dortmund\\
@@ -184,11 +183,12 @@ Download am 09.01.14 unter:\\
 \end{enumerate}
 \section{Anhang}
 \begin{itemize}
+\item Tabellen
 \item Auszug aus dem Messheft
 \end{itemize}
 
 \newpage
-\begin{table}[h]
+\begin{table}
 
 \label{tab1}
 \centering
@@ -207,8 +207,9 @@ Download am 09.01.14 unter:\\
 \end{tabular}
 
 \caption{Diese Tabelle zeigt das ermittelte Frequenzverh\"altnis in Abh\"angigkeit von der Koppelkapazit\"at.}
-
-
+\end{table}
+\begin{table}
+\centering
 
 \begin{tabular}{llll}
 \toprule
@@ -225,7 +226,9 @@ Download am 09.01.14 unter:\\
 \end{tabular}
 \label{tab2}
 \caption{Diese Tabelle zeigt die berechneten Werte f\"ur Frequenzverh\"altnis und Schwebungsfrequenz.}
-
+\end{table}
+\begin{table}
+\centering
 
 \begin{tabular}{llll}
 \toprule
@@ -261,7 +264,8 @@ Download am 09.01.14 unter:\\
 \end{tabular}
 \label{tab4}
 \caption{Diese Tabelle zeigt die gemessen Frequenzen der Fundamentalschwingungen.}
-
+\end{table}
+\begin{table}
 \centering
 \begin{tabular}{lllll}
 \toprule
@@ -278,8 +282,9 @@ Download am 09.01.14 unter:\\
 \bottomrule
 \end{tabular}
 \label{tab5}
-\caption{}
-
+\caption{Diese Tabelle zeigt die Position der Spannungspeaks in Abhängigkeit von der Koppelkapazität $C_K$ }
+\end{table}
+\begin{table}
 \centering
 \begin{tabular}{lllll}
 \toprule
@@ -295,7 +300,7 @@ Download am 09.01.14 unter:\\
  $9.99 \pm 0.30$  & $3.40 \pm 0.17 $  & $3.56 \pm 0.17$  & $0.0212 \pm 0.0007$  & $0.0196 \pm 0.0007$ \\
 \bottomrule
 \end{tabular}
-\label{}
-\caption{}
+\label{tab6}
+\caption{Diese Tabelle zeigt die Frequenz und die Strom der Strompeaks in Abhängigkeit von der Koppelkapazität $C_K$}
 \end{table}
 \end{document}
